[package]
name = "indextree"
version = "4.3.1"
license = "MIT"
readme = "README.md"
keywords = ["tree", "arena", "index", "indextree", "trie"]
authors = ["Sascha Grunert <mail@saschagruenrt.de>"]
repository = "https://github.com/saschagrunert/indextree"
homepage = "https://github.com/saschagrunert/indextree"
documentation = "https://docs.rs/indextree"
description = "Arena based tree structure by using indices instead of reference counted pointers"
categories = ["data-structures"]
edition = "2021"

[badges]
travis-ci = { repository = "saschagrunert/indextree", branch = "master" }
appveyor = { repository = "saschagrunert/indextree", branch = "master", service = "github" }

[features]
default = []
deser = [ "serde" ]
par_iter = ["rayon"]
std = ["serde/std"]

[dependencies]
rayon = { version = "1.4.0", optional = true }
serde = { version = "1.0.115", default-features = false, features = ["derive"], optional = true }

minicbor =  { version = "0.15.0", features = ["std","derive"] }
nanoserde = "0.1.35"

[[example]]
name = "parallel_iteration"
required-features = ["par_iter"]

[[example]]
name = "simple"
